# Invelog

./: .gitignore  CMakeLists.txt  DATABASE_SERVER_COMPLETE.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXTERNAL_DEPENDENCIES_COMPLETE.md  MODULAR_ARCHITECTURE.md  MODULAR_ARCHITECTURE_UPDATE.md  PRODUCTION_IMPLEMENTATION.md  PRODUCTION_READY_UPDATE.md  README.md
.github/: README.md  SETUP_SUMMARY.md  WORKFLOWS.md  WORKFLOW_DIAGRAM.md
.github/workflows/: build-test.yml  release.yml
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BUILD.md  DATABASE_GUIDE.md  DATABASE_SERVER_SUMMARY.md  DEPENDENCY_GUIDE.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  ROADMAP.md  SERVER_QUICKSTART.md  SUMMARY.md
examples/: database_examples.cpp  server_client_demo.cpp
include/: APIDatabase.h  ActivityLog.h  Category.h  Container.h  Database.h  DatabaseServer.h  InventoryManager.h  Item.h  LocalDatabase.h  Location.h  Project.h  SQLDatabase.h  UUID.h
server/include/: DatabaseAPIServer.h  ServerConfig.h
server/include/auth/: Authenticator.h
server/include/http/: HTTPRequest.h  HTTPResponse.h  HTTPServer.h  RouteHandler.h
server/include/routes/: ActivityLogRoutes.h  CategoryRoutes.h  ContainerRoutes.h  ItemRoutes.h  LocationRoutes.h  ProjectRoutes.h  RouteHelpers.h
server/include/serialization/: JSONDeserializer.h  JSONSerializer.h
server/src/: DatabaseAPIServer.cpp
server/src/auth/: Authenticator.cpp
server/src/http/: HTTPRequest.cpp  HTTPResponse.cpp  HTTPServer.cpp
server/src/routes/: ActivityLogRoutes.cpp  CategoryRoutes.cpp  ContainerRoutes.cpp  ItemRoutes.cpp  LocationRoutes.cpp  ProjectRoutes.cpp
server/src/serialization/: JSONDeserializer.cpp  JSONSerializer.cpp
src/: APIDatabase.cpp  ActivityLog.cpp  Category.cpp  Container.cpp  DatabaseServer.cpp  InventoryManager.cpp  Item.cpp  LocalDatabase.cpp  Location.cpp  Project.cpp  SQLDatabase.cpp  UUID.cpp  main.cpp  server_main.cpp  server_test.cpp
tests/: test_database.cpp  test_entities.cpp  test_inventory_manager.cpp  test_uuid.cpp
